# Needs to end up as: /usr/share/icons/hicolor/48x48/apps
icondir = ${datadir}/icons/hicolor/48x48/apps
# Needs to end up as: /usr/share/pixmaps/inodeum
pixmapsdir = ${datadir}/pixmaps/inodeum
icon_DATA = inodeum.png 
pixmaps_DATA = inodeum.png 

dist_doc_DATA = $(icon_DATA)

#EXTRA_DIST = \
#	$(icon_DATA) \
#	$(pixmaps_DATA)

MAINTAINERCLEANFILES = $(icon_DATA)
